--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "paso": "cross-env NODE_ENV=development webpack --watch --progress --hide-modules"
+    "paso": "cross-env NODE_ENV=development webpack --watch --progress --hide-modules",
+    "prod": "cross-env NODE_ENV=production webpack --hide-modules"
+
   },
   "keywords": [
     "ecosystem:cordova"
