--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-stage-3": "^6.24.1",
     "bootstrap": "^4.4.1",
+    "cordova-plugin-vibration": "^3.1.1",
     "cordova-plugin-whitelist": "^1.3.4",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
@@ -47,7 +48,8 @@
   "cordova": {
     "plugins": {
       "cordova-plugin-whitelist": {},
-      "cordova-sqlite-storage": {}
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-vibration": {}
     },
     "platforms": [
       "android",
